--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>In Class: Basic JS</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src="app.js"></script>
+    <script defer src="app copy.js"></script>
 </head>
 <body>
     <h1>In Class Project: Basic JS</h1>
